--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -71,14 +71,9 @@ jobs:
       - name: Install grunt
         run: sudo npm i -g grunt-cli
       - name: Grunt
-        run: grunt desktop-darwin
+        run: npm run dev-desktop-macos
       - name: Upload x64 dmg artifact
         uses: actions/upload-artifact@v1
         with:
-          name: KeeWeb-${{ steps.get_tag.outputs.tag }}.mac.x64.dmg
-          path: dist/desktop/KeeWeb-${{ steps.get_tag.outputs.tag }}.mac.x64.dmg
-      - name: Upload arm64 dmg artifact
-        uses: actions/upload-artifact@v1
-        with:
-          name: KeeWeb-${{ steps.get_tag.outputs.tag }}.mac.arm64.dmg
-          path: dist/desktop/KeeWeb-${{ steps.get_tag.outputs.tag }}.mac.arm64.dmg
+          name: KeeWeb.zip
+          path: temp/desktop
